--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
+altgraph==0.17.5
 comtypes==1.4.13
+packaging==26.0
+pefile==2024.8.26
+pyinstaller==6.19.0
+pyinstaller-hooks-contrib==2026.0
 pypiwin32==223
 pyttsx3==2.99
 pywin32==311
+pywin32-ctypes==0.2.3
+setuptools==82.0.0
